# dbdict

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  schema-0.2.yaml  schema.yaml  spec.md
.claude/: .gitignore  claude.md
.claude-work/: .active  .gitignore
.claude-work/insights/: 20260704-1937-duckdb-reader-type-mapping-and-gating.md  20260705-1004-duckdb-round-trip-create-type.md  20260705-1610-dual-format-validation-delegation-review-lessons.md  20260705-2320-duckdb-gotchas-and-trait-seam-testability.md  20260706-1246-typedef-expansion-derived-state-and-review-convergence.md  20260706-1357-format-dependent-validation-and-sigpipe-testing.md  20260706-1436-rich-data-level-seam-lessons.md  20260706-1511-ddl-generator-seam-and-fixpoint-ordering.md  20260706-1743-early-returns-starve-later-checks.md  20260707-0709-explicit-drop-flushes-duckdb-wal.md  20260707-0806-null-safe-anti-joins-and-asserting-fakes.md  20260707-0821-e2e-fixtures-lock-semantics-not-just-behavior.md  20260707-0953-composed-guarantees-and-orientation-normalization.md  20260707-1020-one-fixture-three-cardinality-outcomes.md  20260707-1159-snapshot-url-exposure-and-fixpoint-acceptance.md  20260707-1357-fork-rebrand-surface-and-inherited-process-files.md  20260707-1708-extension-loading-under-hardened-duckdb.md  20260707-2105-plan-builder-mirrors-oracle-fails-at-plan-time.md  20260707-2127-identity-fk-draws-and-exact-null-fraction.md  20260708-0954-capacity-contracts-review-vs-tests.md  20260708-1516-shared-orientation-helper-kills-planner-validator-drift.md  20260708-1612-range-claims-map-and-copy-uniqueness.md  20260709-0958-agent-review-catches-what-tdd-misses.md  20260709-1128-claims-and-tests-that-dont-verify-what-they-claim.md  20260719-1304-bundled-extension-autoload-cannot-be-disabled.md  20260722-1928-git-topology-traps-shallow-clones-and-tag-derefs.md  20260723-0927-push-output-proves-fast-forward-vs-force.md  20260723-0950-prefer-refusing-variant-of-destructive-commands.md  20260723-1009-self-recording-workflows-move-their-own-target.md
crates/dbdict/: Cargo.toml
crates/dbdict-cli/: Cargo.toml
crates/dbdict-cli/src/: main.rs
crates/dbdict-cli/tests/: cli.rs
crates/dbdict-cli/tests/snapshots/: cli__ddl_prints_an_executable_script.snap  cli__multiple_diagnostics_json_output.snap  cli__multiple_diagnostics_text_output.snap  cli__no_args_lists_all_subcommands.snap  cli__resolve_prints_global_and_scoped_expansions.snap  cli__types_duckdb_prints_every_relation.snap  cli__validate_data_rich_reports_d01_and_d02.snap  cli__validate_data_rich_reports_d01_d02_and_d03.snap  cli__validate_data_rich_reports_d01_through_d04.snap  cli__validate_data_rich_reports_d01_through_d05.snap
crates/dbdict-ddl/: Cargo.toml
crates/dbdict-ddl/src/: lib.rs
crates/dbdict-ddl/tests/: generate.rs
crates/dbdict-duckdb/: Cargo.toml
crates/dbdict-duckdb/src/: lib.rs  native.rs  types.rs
crates/dbdict-duckdb/tests/: classify.rs  data_queries.rs  ddl_helpers.rs  describe.rs  e2e_validate_meta.rs  expand.rs  extensions.rs  instantiate.rs  read_schema.rs  spike_roundtrip.rs
crates/dbdict-dummy-data/: Cargo.toml
crates/dbdict-dummy-data-duckdb/: Cargo.toml
crates/dbdict-dummy-data-duckdb/src/: generate.rs  lib.rs  types.rs  values.rs
crates/dbdict-dummy-data-duckdb/tests/: generate.rs  values.rs
crates/dbdict-dummy-data/src/: lib.rs  plan.rs
crates/dbdict-dummy-data/tests/: plan.rs
crates/dbdict-parquet/: Cargo.toml
crates/dbdict-parquet/src/: lib.rs  metadata.rs  scan.rs
crates/dbdict/src/: join_expr.rs  lib.rs  lower.rs  model.rs  problem.rs  rich.rs  validate_data.rs  validate_meta.rs  validate_spec.rs
crates/dbdict/tests/: rich.rs  rich_data.rs  rich_meta.rs  validate_data.rs  validate_meta.rs  validate_spec.rs
crates/dbdict/tests/common/: mod.rs
crates/dbdict/tests/fixtures/spec/: clean-two-tables.yaml  s01-fk-range-conjunct-only.yaml  s12-s13-valid-ok.yaml
crates/dbdict/tests/snapshots/: rich__duplicate_global_typedef_errors.snap  rich__s10_rich_column_names_colliding_by_case.snap  rich__s10_rich_table_names_colliding_by_case.snap  rich__s19_rejects_an_invalid_extension_name.snap  rich__unsupported_version_is_rejected_with_supported_list.snap  validate_data__nulls_in_required_column_reported.snap  validate_meta__extra_column_in_data_is_warning.snap  validate_meta__missing_column_in_data_reported.snap  validate_meta__type_mismatch_reported.snap  validate_meta__unreadable_source_does_not_stop_other_tables.snap  validate_meta__unreadable_source_reported.snap  validate_spec__bad_cardinality.snap  validate_spec__enum_non_string_label.snap  validate_spec__missing_version.snap  validate_spec__non_string_glossary_value.snap  validate_spec__s01_fk_no_relationship.snap  validate_spec__s01_fk_range_conjunct_only.snap  validate_spec__s02_missing_table.snap  validate_spec__s03_missing_column.snap  validate_spec__s04_bad_join.snap  validate_spec__s05_conflicts_not_on_both_sides.snap  validate_spec__s06_cardinality_mismatch.snap  validate_spec__s06_self_join_one_to_many.snap  validate_spec__s07_enum_without_values.snap  validate_spec__s07_examples_on_boolean.snap  validate_spec__s07_other_type_missing_examples.snap  validate_spec__s07_range_on_string_type.snap  validate_spec__s07_range_type_missing_range.snap  validate_spec__s07_wrong_rep_on_enum.snap  validate_spec__s08_units_on_non_quantity.snap  validate_spec__s10_duplicate_column_name.snap  validate_spec__s10_duplicate_table_name.snap  validate_spec__s11_empty_column_name.snap  validate_spec__s11_empty_table_name.snap  validate_spec__s12_date_not_iso.snap  validate_spec__s12_wrong_value_type.snap  validate_spec__s13_descending_range.snap  validate_spec__s14_time_zone_on_non_datetime.snap  validate_spec__s15_bad_time_zone.snap  validate_spec__s17_date_not_iso.snap  (+5 more)
examples/: dabstep.yaml  elevators.yaml  foodbank.yaml  loan-application.yaml  otters.yaml
research/: claude-code-auto-type-inject-startup-command.md  claude-code-interactive-startup-mechanisms.md
site/: _quarto.yml  index.md  spec.md  validation.md
yaml-schema/: README.md  data-dict.yaml
(+165 files in other folders)
