[workspace]
resolver = "2"
members = [
    "crates/dbdict",
    "crates/dbdict-cli",
    "crates/dbdict-ddl",
    "crates/dbdict-duckdb",
    "crates/dbdict-dummy-data",
    "crates/dbdict-dummy-data-duckdb",
    "crates/dbdict-parquet",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/pjc-crates/dbdict"

[workspace.dependencies]
dbdict = { path = "crates/dbdict", version = "0.0.1" }
clap = { version = "4", features = ["derive"] }
quarto-yaml = "0.1.0"
quarto-yaml-validation = "0.1.0"
quarto-source-map = "0.1.0"
annotate-snippets = "0.12"
parquet = { version = "54", default-features = false }
dbdict-parquet = { path = "crates/dbdict-parquet", version = "0.0.1" }
dbdict-duckdb = { path = "crates/dbdict-duckdb", version = "0.0.1" }
dbdict-dummy-data = { path = "crates/dbdict-dummy-data", version = "0.0.1" }
dbdict-dummy-data-duckdb = { path = "crates/dbdict-dummy-data-duckdb", version = "0.0.1" }
dbdict-ddl = { path = "crates/dbdict-ddl", version = "0.0.1" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `json` statically links the json extension into the bundled engine: the
# hardened scratch config (`enable_external_access(false)`) blocks LOADing
# external extension binaries, so an extension is only available to
# validation when it is compiled in
duckdb = { version = "~1.10504.0", features = ["bundled", "json"] }
