# the first generator crate: consumes the lowered model from `dbdict` and the
# scratch-database mechanics from `dbdict-duckdb`; never touches YAML or the CLI
[package]
name = "dbdict-ddl"
description = "DuckDB DDL generator for dbdict.yaml dictionaries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dbdict.workspace = true
dbdict-duckdb.workspace = true

[dev-dependencies]
# tests build model fixtures by hand, which needs placeholder source spans
quarto-source-map.workspace = true
