[package]
name = "dbdict"
description = "Core library for the dbdict.yaml specification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dbdict-parquet.workspace = true
quarto-yaml.workspace = true
quarto-yaml-validation.workspace = true
quarto-source-map.workspace = true
annotate-snippets.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
insta = "1"
indoc = "2"
parquet.workspace = true
serde_json.workspace = true
